Fixed z-index of overlay-nav

--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ a {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     top: 0;
     right: 0;
     background-color: rgb(0, 0, 0);
